[workspace]
members = [
    "contracts/*",
    "packages/*"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"


[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false

[workspace.dependencies]
cosmwasm-std = { version = "2.1.4" }
cw-storage-plus = { version = "2.0.0" }
cw-utils = { version = "2.0.0" }
cw-ownable = {version = "2.1.0"}
cw2 = { version = "2.0.0" }
thiserror = { version = "2.0.3" }
cosmwasm-schema = { version = "2.1.4" }
cw-multi-test = { version = "2.2.0" }

symphony-utils = { path = "packages/symphony-utils" }
symphony-interfaces = { path = "packages/symphony-interfaces" }
